--- a/term2/P6-Extended-Kalman-Filter/CMakeLists.txt
+++ b/term2/P6-Extended-Kalman-Filter/CMakeLists.txt
@@ -7,10 +7,10 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/main.cpp src/tools.cpp src/FusionEKF.cpp src/kalman_filter.cpp src/tools.h src/FusionEKF.h src/kalman_filter.h)
+set(sources src/tools.cpp src/FusionEKF.cpp src/kalman_filter.cpp src/tools.h src/FusionEKF.h src/kalman_filter.h)
+set(test_sources test/setup.cpp test/test_tools.cpp test/test_kalman_filter.cpp test/test_FusionEKF.cpp)
 
-
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/include)
 include_directories(/usr/local/opt/openssl/include)
@@ -18,9 +18,17 @@ link_directories(/usr/local/lib)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1*/lib)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
+# Add source files to a library to avoid additional compile for unit tests.
+add_library (ExtendedKF_lib ${sources})
 
-add_executable(ExtendedKF ${sources})
+# Target app
+add_executable(ExtendedKF src/main.cpp)
+target_link_libraries(ExtendedKF ExtendedKF_lib z ssl uv uWS)
 
-target_link_libraries(ExtendedKF z ssl uv uWS)
+# Unit tests
+add_executable(ExtendedKF_unit_tests ${test_sources})
+target_link_libraries(ExtendedKF_unit_tests ExtendedKF_lib)
+enable_testing()
+add_test(NAME ExtendedKF_Test_Suite COMMAND ExtendedKF_unit_tests)
