Parameter tuning application
Skip the simulator and process the both data sets directly from text
files. The second data set was extracted to text file by running the
simulator and writing the data to file.

--- a/term2/P7-Unscented-Kalman-Filter/CMakeLists.txt
+++ b/term2/P7-Unscented-Kalman-Filter/CMakeLists.txt
@@ -32,3 +32,7 @@ add_executable(UnscentedKF_unit_tests ${test_sources})
 target_link_libraries(UnscentedKF_unit_tests UnscentedKF_lib)
 enable_testing()
 add_test(NAME ExtendedKF_Test_Suite COMMAND UnscentedKF_unit_tests)
+
+# Tuning app
+add_executable(UnscentedKF_tuning src/main_tuning.cpp)
+target_link_libraries(UnscentedKF_tuning UnscentedKF_lib)
