Unit test framework
- Adapt build scripts to build and execute unit tests, using the
  catch2 framework.
- Added empty test for the particle_filter.cpp.

--- a/term2/P8-Kidnapped-Vehicle/CMakeLists.txt
+++ b/term2/P8-Kidnapped-Vehicle/CMakeLists.txt
@@ -7,10 +7,10 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/particle_filter.cpp src/main.cpp)
+set(sources src/particle_filter.cpp)
+set(test_sources test/setup.cpp test/test_particle_filter.cpp)
 
-
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/include)
 include_directories(/usr/local/opt/openssl/include)
@@ -18,11 +18,17 @@ link_directories(/usr/local/lib)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1*/lib)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
+# Add source files to a library to avoid additional compile for unit tests.
+add_library (particle_filter_lib ${sources})
 
-add_executable(particle_filter ${sources})
+# Target app
+add_executable(particle_filter src/main.cpp)
+target_link_libraries(particle_filter particle_filter_lib z ssl uv uWS)
 
-
-target_link_libraries(particle_filter z ssl uv uWS)
-
+# Unit tests
+add_executable(particle_filter_unit_tests ${test_sources})
+target_link_libraries(particle_filter_unit_tests particle_filter_lib)
+enable_testing()
+add_test(NAME Particle_Filter_Test_Suite COMMAND particle_filter_unit_tests)
