Prepare for unit tests
Update cmake script to build unit tests.

--- a/term2/P9-PID-Contoller/CMakeLists.txt
+++ b/term2/P9-PID-Contoller/CMakeLists.txt
@@ -7,20 +7,29 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
-set(sources src/PID.cpp src/main.cpp)
+set(sources src/PID.cpp)
+set(test_sources test/setup.cpp test/test_PID.cpp)
 
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/opt/openssl/include)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1*/lib)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
+# Add source files to a library to avoid additional compile for unit tests.
+add_library (pid_lib ${sources})
 
-add_executable(pid ${sources})
+# Target app
+add_executable(pid src/main.cpp)
+target_link_libraries(pid pid_lib z ssl uv uWS)
 
-target_link_libraries(pid z ssl uv uWS)
+# Unit tests
+add_executable(pid_unit_tests ${test_sources})
+target_link_libraries(pid_unit_tests pid_lib)
+enable_testing()
+add_test(NAME PID_Test_Suite COMMAND pid_unit_tests)
