Path planning using cost functions
- Trajectories of other vehicles is predicted.
- Path::Logic class providing intentions to evaluate.
- A number of trajectories is generated for each intention to
  evaluate.
- Simple cost function calculating scored for each trajectory.

--- a/term3/P11-Path-Planning/CMakeLists.txt
+++ b/term3/P11-Path-Planning/CMakeLists.txt
@@ -7,8 +7,8 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/constants.cpp src/helpers.cpp src/path/planner.cpp src/path/trajectory.cpp)
-set(test_sources test/setup.cpp test/path/test_planner.cpp test/path/test_trajectory.cpp)
+set(sources src/constants.cpp src/helpers.cpp src/path/logic.cpp src/path/planner.cpp src/path/trajectory.cpp)
+set(test_sources test/setup.cpp test/path/test_logic.cpp test/path/test_planner.cpp test/path/test_trajectory.cpp)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
